--- a/HotelAdmin/nbproject/private/private.properties
+++ b/HotelAdmin/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/cristian/.netbeans/10.0/build.properties
+user.properties.file=C:\\Users\\nicol\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
