--- a/HotelAdmin/nbproject/private/private.properties
+++ b/HotelAdmin/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\crist\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.jcalendar-1.4.jar=C:\\Users\\Usuario\\Documents\\Ultima Desarrollo\\Desarrollo\\HotelAdmin\\src\\Servicios\\jcalendar-1.4.jar
+user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
