--- a/HotelAdmin/nbproject/private/private.properties
+++ b/HotelAdmin/nbproject/private/private.properties
@@ -1,3 +1,7 @@
 compile.on.save=true
-file.reference.jcalendar-1.4.jar=C:\\Users\\crist\\Documents\\NetBeansProjects\\Desarrollo\\Desarrollo\\HotelAdmin\\src\\Servicios\\jcalendar-1.4.jar
-user.properties.file=C:\\Users\\crist\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+do.depend=false
+do.jar=true
+file.reference.jcalendar-1.4.jar=C:\\Users\\Usuario\\Documents\\protecto_desarrollo\\Desarrollo\\HotelAdmin\\src\\Servicios\\jcalendar-1.4.jar
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
