--- a/HotelAdmin/nbproject/private/private.properties
+++ b/HotelAdmin/nbproject/private/private.properties
@@ -1,7 +1,8 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.jcalendar-1.4.jar=C:\\Users\\Usuario\\Documents\\protecto_desarrollo\\Desarrollo\\HotelAdmin\\src\\Servicios\\jcalendar-1.4.jar
+file.reference.AbsoluteLayout.jar=C:\\Users\\vanes\\Desktop\\PROYECTO DESARROLLO\\Master\\Desarrollo\\HotelAdmin\\src\\Servicios\\AbsoluteLayout.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\vanes\\Desktop\\PROYECTO DESARROLLO\\Master\\Desarrollo\\HotelAdmin\\src\\Servicios\\jcalendar-1.4.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\vanes\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
